# matrix

./: .gitignore  BUILD  CMakeLists.txt  README.md  WORKSPACE  bazel-bin  bazel-matrix  bazel-out  bazel-testlogs  matrix  matrix.cpp  matrix.h
.github/workflows/: bazel_build_and_cpp_tests.yml  cpp_tests.yml
cmake_build/: MatrixTest
include/: BUILD
lib/: matrix.h
matrix/: BUILD  CMakeLists.txt
matrix/cmake_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  Matrix  MatrixTest  cmake_install.cmake
matrix/include/: matrix.h
matrix/src/: matrix.cpp
matrix/test/: test.cpp
src/: BUILD  main.cpp  matrix.cpp
test/: BUILD  test.cpp
